Change hack photo width to 100vw to test whether it fixes bug with photos becoming smaller in horizontal orientation on iphone 11

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,7 +397,7 @@ https://stackoverflow.com/questions/46090760/controlling-the-size-of-an-image-wi
 .hack-photo {
     border-radius: 15px; 
     max-height: 100%; 
-    max-width: 100%; 
+    width: 100vw; 
     object-fit: cover;  
     vertical-align: bottom; 
 }
